RESOLVED FIXED267489
REGRESSION(268621@main): Crash in ContentKeyGroupDataSource::~ContentKeyGroupDataSource() due to CheckedPtr misuse
https://bugs.webkit.org/show_bug.cgi?id=267489
Summary REGRESSION(268621@main): Crash in ContentKeyGroupDataSource::~ContentKeyGroup...
Andy Estes
Reported 2024-01-13 00:15:50 PST
REGRESSION(268621@main): Crash in ContentKeyGroupDataSource::~ContentKeyGroupDataSource() due to CheckedPtr misuse
Attachments
Andy Estes
Comment 1 2024-01-13 00:15:52 PST Comment hidden (obsolete)
Andy Estes
Comment 2 2024-01-13 00:20:57 PST
Andy Estes
Comment 3 2024-01-13 00:33:04 PST
EWS
Comment 4 2024-01-13 12:10:45 PST
Committed 273014@main (13c5af219951): <https://commits.webkit.org/273014@main> Reviewed commits have been landed. Closing PR #22747 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.