REGRESSION(268621@main): Crash in ContentKeyGroupDataSource::~ContentKeyGroupDataSource() due to CheckedPtr misuse https://bugs.webkit.org/show_bug.cgi?id=267489 rdar://120422670

Reviewed by Eric Carlson.

In 268621@main, WebAVContentKeyGroup was changed to store a CheckedPtr to its data source. However,
because CDMInstanceSessionFairPlayStreamingAVFObjC stores m_group in an options dictionary attached
to AVContentKeyRequests whose lifetimes are controlled by AVFoundation, WebKit cannot control the
lifetime of WebAVContentKeyGroup instances.

Fixed this by partially reverting 268621@main so that WebAVContentKeyGroup stores its data source as
a WeakPtr again.

* Source/WebCore/platform/graphics/avfoundation/ContentKeyGroupDataSource.h:
* Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/WebAVContentKeyGroup.mm:
(-[WebAVContentKeyGroup initWithContentKeySession:dataSource:]):
(-[WebAVContentKeyGroup expire]):
(-[WebAVContentKeyGroup logIdentifier]):
(-[WebAVContentKeyGroup loggerPtr]):
(-[WebAVContentKeyGroup logChannel]):

Canonical link: https://commits.webkit.org/273014@main